# claude-code-platzi

./: .gitignore
.claude/: settings.local.json
Backend/: .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 0793ce6ed41b_add_fulltext_search.py  d43db703ccfb_initial_schema.py
Backend/app/: config.py  main.py  seed.py
Backend/app/api/: deps.py
Backend/app/api/v1/: auth.py  categories.py  favorites.py  router.py  subscriptions.py  tags.py  users.py  videos.py  watch_progress.py
Backend/app/api/v1/admin/: categories.py  dashboard.py  users.py  videos.py
Backend/app/core/: database.py  exceptions.py  middleware.py  security.py
Backend/app/models/: auth.py  base.py  category.py  favorite.py  payment.py  subscription.py  tag.py  user.py  video.py  watch_progress.py
Backend/app/repositories/: base.py  category_repository.py  favorite_repository.py  payment_repository.py  refresh_token_repository.py  subscription_repository.py  tag_repository.py  user_repository.py  video_repository.py  watch_progress_repository.py
Backend/app/schemas/: auth.py  category.py  common.py  favorite.py  subscription.py  user.py  video.py  watch_progress.py
Backend/app/services/: auth_service.py  category_service.py  favorite_service.py  subscription_service.py  user_service.py  video_service.py  watch_progress_service.py
Backend/app/tests/: conftest.py
Backend/app/tests/integration/api/: test_auth.py  test_videos.py
Backend/app/tests/unit/services/: test_auth_service.py  test_video_service.py
(+45 files in other folders)
